<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="extensions_title">Extensions</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="choose_app">Choose app</string>
    <string name="general_category">General</string>
    <string name="gestures_category">Gestures</string>
    <string name="music_category">Music</string>
    <string name="weather_category">Lockscreen weather</string>
    <string name="security_category">Security</string>
    <string name="hardware_category">Hardware</string>
    <string name="animations_category">Tile animations</string>
    <string name="traffic_category">Traffic indicators</string>
    <string name="aosp_recents_category">AOSP recents</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="recents_category">Recents</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="notifications_panel_category">Notifications panel</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="statusbar_items_category">Statusbar items</string>
    <string name="navigation_category">Navigation</string>
    <string name="breathing_notifications_category">Breathing Notifications</string>
    <string name="build_tweaks_summary_title">Extend your device!</string>
    <string name="system_animations">System animations</string>
    <string name="toast">Toast</string>
    <string name="listview">ListView</string>
    <string name="qs_header_title">Quick settings header</string>
    <string name="qs_omnijaws_category">Weather QS tile</string>
    <string name="extensions_dialog_title">Help us help you!</string>
    <string name="extensions_dialog_message">If you find a bug with any of these settings, post in the Bug Reports section of our Google+ page. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="extensions_dialog_toast">READ THE WHOLE THING!</string>
    <string name="weather_config_title">Service settings</string>
    <string name="weather_config_summary"></string>
    <string name="header_weather_title">Header view weather</string>
    <string name="header_weather_summary">Enable notification panel header weather display</string>
    <string name="weather_icon_pack_title">Condition icon pack</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
    <string name="brightness_icon_title">Brightness icon </string>
    <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
    <string name="quick_settings_title">Quick Settings</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
    <string name="status_bar_quick_qs_pulldown_summary">Right edge of the statusbar pulls down Quick Settings</string>
    <string name="misc_extensions_title">Misc extensions</string>
    <string name="general_tweaks_title">General tweaks</string>
    <string name="notifications_title">Notifications</string>
    <string name="recents_ui_title">Recents UI</string>
    <string name="lockscreen_ui_title">Lockscreen UI</string>
    <string name="lockscreen_shortcuts">Lockscreen shortcuts</string>
    <string name="buttons_title">Buttons</string>
    <string name="blur_title">Blur</string>
    <string name="animations_title">Animations</string>
    <string name="carrierlabel_title">Carrier Label</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="double_tap_to_sleep_title">Double-tap to sleep</string>
    <string name="double_tap_to_sleep_summary">Double-tap on the statusbar or top third and bottom shortcut area of the lock screen to turn off the display</string>
    <string name="toast_icon_title">Toast icon</string>
    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="power_notification_controls_title">Power notification controls</string>
    <string name="power_notification_controls_summary">Select importance level for notifications</string>
    <string name="force_expanded_notifications_title">Force Expanded Notifications</string>
    <string name="force_expanded_notifications_summary">Available only for apps that support expanded notifications</string>
    <string name="disable_immersive_message_title">Disable Immersive Mode Messages</string>
    <string name="disable_immersive_message_summary">This will hide all Immersive Mode Messages</string>
    <string name="flashlight_notification_title">Flashlight notification</string>
    <string name="flashlight_notification_summary">Enable notification for when the flashlight is on</string>
    <string name="qs_tile_animation_style_title">Tiles animation style</string>
    <string name="qs_tile_animation_duration_title">Tiles animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
    <string name="qs_tile_animation_style_off">No animation</string>
    <string name="qs_tile_animation_style_flip">Flip</string>
    <string name="qs_tile_animation_style_rotate">Rotate</string>
    <string name="qs_tile_animation_duration_low">Low</string>
    <string name="qs_tile_animation_duration_default">Default</string>
    <string name="qs_tile_animation_duration_fast">Fast</string>
    <string name="qs_tile_animation_interpolator_linearInterpolator">Linear</string>
    <string name="qs_tile_animation_interpolator_accelerateInterpolator">Accelerate</string>
    <string name="qs_tile_animation_interpolator_decelerateInterpolator">Decelerate</string>
    <string name="qs_tile_animation_interpolator_accelerateDecelerateInterpolator">Accelerate decelerate</string>
    <string name="qs_tile_animation_interpolator_bounceInterpolator">Bounce</string>
    <string name="qs_tile_animation_interpolator_overshootInterpolator">Overshoot</string>
    <string name="qs_tile_animation_interpolator_anticipateInterpolator">Anticipate</string>
    <string name="qs_tile_animation_interpolator_anticipateOvershootInterpolator">Anticipate overshoot</string>
    <string name="qs_set_animation_style">%1$s</string>
    <string name="qs_set_animation_duration">%1$s</string>
    <string name="qs_set_animation_interpolator">%1$s</string>
    <string name="media_scanner_on_boot_title">MediaScanner behavior on boot</string>
    <string name="media_scanner_on_boot_enabled">Scan media</string>
    <string name="media_scanner_on_boot_ask">Ask to scan (notification)</string>
    <string name="media_scanner_on_boot_disabled">Do not scan media</string>
    <string name="volbtn_cursor_control_title">Volume key cursor control</string>
    <string name="volbtn_cursor_control_off">Disabled</string>
    <string name="volbtn_cursor_control_on">Volume up/down moves cursor left/right</string>
    <string name="volbtn_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
    <string name="button_wake_title">Wake up</string>
    <string name="home_wake_summary">Pressing the home button will wake your device</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="status_bar_clock">Clock &amp; date</string>
    <string name="missed_call_breath_title">Breathing Missed Call</string>
    <string name="missed_call_breath_summary">Will give your missed call notifications a breathing effect in the statusbar</string>
    <string name="voicemail_breath_title">Breathing Voicemail</string>
    <string name="voicemail_breath_summary">Will give your voicemail notifications a breathing effect in the statusbar</string>
    <string name="sms_breath_title">Breathing SMS</string>
    <string name="sms_breath_summary">Will give your SMS notifications a breathing effect in the statusbar</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the statusbar</string>
    <string name="lockscreen_targets_message">Lockscreen corners shortcuts</string>
    <string name="screenshot_type_title">Screenshot type</string>
    <string name="screenshot_options_category">Screenshot options</string>
    <string name="screenshot_delay_title">Screenshot delay</string>
    <string name="screenshot_delay_summary">Adjust the time for when a screenshot is captured</string>
    <string name="disable_fc_notifications_title">Disable FC Notifications</string>
    <string name="disable_fc_notifications_summary">This will hide all force close notifications</string>
    <string name="wakelockblocker_category">Wakelock blocker</string>
    <string name="wakelock_blocker_summary">Block system wakelocks</string>
    <string name="ticker_screen_title">Ticker</string>
    <string name="ticker_title">Statusbar Ticker</string>
    <string name="headsup_category">HeadsUp Settings</string>
    <string name="headsup_settings_title">Heads up notifications</string>
    <string name="alarm_blocker">Alarm blocker</string>
    <string name="three_finger_gesture">Three finger screenshot</string>
    <string name="three_finger_gesture_summary">Swipe three fingers across the screen to screenshot</string>
    <string name="headset_connect_player_title">Launch music app</string>
    <string name="screen_state_toggles_title">Suspend actions</string>
    <string name="wired_ringtone_focus_mode_title">Where to play ringtones from</string>
    <string name="dnd_when_call_title">Do not Disturb</string>
    <string name="dnd_when_call_summary">Enable Do not Disturb when call active</string>
    <string name="statusbar_weather_title">Statusbar weather</string>
    <string name="statusbar_weather_dialog_title">Statusbar weather style</string>
    <string name="roaming_indicator_icon_title">Show roaming indicator</string>
    <string name="roaming_indicator_icon_summary">Display roaming indicator in signal icon when in roaming mode</string>
    <string name="screenshot_crop_and_share_title">Screenshot crop &amp; share</string>
    <string name="screenshot_crop_and_share_summary">Show an editor window after taking a screenshot in order to do some operations like cropping, saving or sharing it</string>
    <string name="bluetooth_battery_title">Show Bluetooth battery status</string>
    <string name="bluetooth_battery_summary">Show battery status for the currently connected bluetooth device, if available.</string>
    <string name="lockscreen_shortcuts_title">Center screen Shortcuts</string>
    <string name="lockscreen_shortcuts_summary">Add center shortcuts on lockscreen</string>
    <string name="lockscreen_shorcuts_longpress_title">Shortcuts longpress</string>
    <string name="lockscreen_shorcuts_longpress_summary">Open custom lock screen shortcuts on longpress</string>
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the cross sign next to signal bar when data is disabled</string>
</resources>