<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016 AospExtended ROM Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/general_tweaks_title">

    <PreferenceCategory
        android:key="general_tweaks_general_category"
        android:title="@string/general_category">

        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
            android:key="toast_icon"
            android:title="@string/toast_icon_title"
            android:summary="@string/toast_icon_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="media_scanner_on_boot"
            android:title="@string/media_scanner_on_boot_title"
            android:entries="@array/media_scanner_on_boot_entries"
            android:entryValues="@array/media_scanner_on_boot_values"
            android:persistent="false" />

        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
            android:key="disable_fc_notifications"
            android:title="@string/disable_fc_notifications_title"
            android:summary="@string/disable_fc_notifications_summary"
            android:defaultValue="false" />

        <!-- Headset -->
        <ListPreference
                android:key="headset_connect_player"
                android:title="@string/headset_connect_player_title"
                android:entries="@array/headset_connect_player_entries"
                android:entryValues="@array/headset_connect_player_values" />

        <ListPreference
            android:key="wired_ringtone_focus_mode"
            android:title="@string/wired_ringtone_focus_mode_title"
            android:entries="@array/wired_ringtone_focus_mode_entries"
            android:entryValues="@array/wired_ringtone_focus_mode_values" />

    </PreferenceCategory>

        <PreferenceCategory
            android:key="screenshot_options"
            android:title="@string/screenshot_options_category" >

        <org.aospextended.extensions.preference.SystemSettingSwitchPreference
            android:key="three_finger_gesture"
            android:title="@string/three_finger_gesture"
            android:summary="@string/three_finger_gesture_summary"
            android:defaultValue="false" />

        <ListPreference
            android:entries="@array/screenshot_type_entries"
            android:entryValues="@array/screenshot_type_values"
            android:key="screenshot_type"
            android:title="@string/screenshot_type_title" />

        <org.aospextended.extensions.preference.CustomSeekBarPreference
            android:key="screenshot_delay"
            android:title="@string/screenshot_delay_title"
            android:summary="@string/screenshot_delay_summary"
            settings:max="10000"
            settings:min="100"
            settings:interval="100"
            settings:units="ms"
            android:persistent="false" />

         <org.aospextended.extensions.preference.SystemSettingSwitchPreference
            android:key="screenshot_crop_and_share"
            android:title="@string/screenshot_crop_and_share_title"
            android:summary="@string/screenshot_crop_and_share_summary"
            android:defaultValue="false" />

        </PreferenceCategory>

        <PreferenceCategory
            android:key="wakelockblocker_options"
            android:title="@string/wakelockblocker_category" >

         <Preference
             android:id="@+id/alarm_blocker"
             android:title="@string/alarm_blocker"
             android:fragment="org.aospextended.extensions.AlarmBlocker" />
       
         <Preference
            android:key="wakelockblocker"
            android:fragment="org.aospextended.extensions.WakelockBlocker"
            android:title="@string/wakelockblocker_category"
            android:summary="@string/wakelock_blocker_summary" />

        </PreferenceCategory>

        <PreferenceCategory
            android:key="screenstate_options"
            android:title="@string/screen_state_toggles_title" >


     <Preference
        android:key="screenstate_category"
        android:title="@string/screen_state_toggles_title" 
        android:fragment="org.aospextended.extensions.ScreenStateToggles" />

       </PreferenceCategory>

</PreferenceScreen>
