<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/status_bar_category"
            android:icon="@drawable/ic_status_bar_category"
            android:title="@string/status_bar_category" 
            app:exb_color="@color/bottombar_active" />

    <item
            android:id="@+id/notifications_panel_category"
            android:icon="@drawable/ic_notifications_panel_category"
            android:title="@string/notifications_panel_category" 
            app:exb_color="@color/bottombar_active" />

    <item
            android:id="@+id/navigation_and_recents_category"
            android:icon="@drawable/ic_navigation_and_recents_category"
            android:title="@string/navigation_and_recents_category" 
            app:exb_color="@color/bottombar_active" />

    <item
            android:id="@+id/lockscreen_category"
            android:icon="@drawable/ic_lockscreen_category"
            android:title="@string/lockscreen_category" 
            app:exb_color="@color/bottombar_active" />

    <item
            android:id="@+id/system_category"
            android:icon="@drawable/ic_system_category"
            android:title="@string/system_category" 
            app:exb_color="@color/bottombar_active" />                                            

</menu>
