<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 AospExtended ROM
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/shortcut_category"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

        <PreferenceScreen
            android:key="lockscreen_shortcuts"
            android:fragment="org.aospextended.extensions.dslv.ActionListViewSettings"
            android:summary="@string/lockscreen_shortcuts_summary"
            android:title="@string/lockscreen_shortcuts_title">
                <extra android:name="actionMode" android:value="4" />
                <extra android:name="maxAllowedActions" android:value="5" />
                <extra android:name="disableLongpress" android:value="true" />
                <extra android:name="useAppPickerOnly" android:value="true" />
  </PreferenceScreen>

        <SwitchPreference
            android:key="lockscreen_shortcuts_longpress"
            android:title="@string/lockscreen_shorcuts_longpress_title"
            android:summary="@string/lockscreen_shorcuts_longpress_summary" />

        <PreferenceScreen
            android:title="@string/lockscreen_targets_message" 
            android:summary="@string/lockscreen_target_summary">
            <intent
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.cm.LockscreenShortcutsActivity" />
        </PreferenceScreen>
</PreferenceScreen>
