<?xml version="1.0" encoding="utf-8"?>
<!-- 
     Copyright (C) 2016 AospExtended ROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/status_bar_category">

         <PreferenceScreen
            android:key="systemui_tuner_statusbar"
            android:title="@string/statusbar_items_category"
            android:layout="@layout/preference_systemui_tuner_statusbaritems" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.TunerActivity" />
         </PreferenceScreen>

          <PreferenceScreen
            android:key="statusbarclock"
            android:fragment="org.aospextended.extensions.StatusbarClock"
            android:layout="@layout/preference_statusbarclock"
            android:title="@string/status_bar_clock" />

         <Preference
            android:key="battery_style_pref"
            android:fragment="org.aospextended.extensions.BatterySettings"
            android:layout="@layout/preference_battery_settings"
            android:title="@string/status_bar_battery_title" />

         <PreferenceScreen
            android:key="traffic"
            android:fragment="org.aospextended.extensions.Traffic"
            android:layout="@layout/preference_traffic"
            android:title="@string/traffic_category" />

         <PreferenceScreen
            android:key="misc_extensions"
            android:fragment="org.aospextended.extensions.statusbar.MiscExtensions"
            android:layout="@layout/preference_misc_extensions"
            android:title="@string/misc_extensions_title" />

</PreferenceScreen>
